# lib_geotiff

./: CMakeLists.txt  geo_new.c
cmake/: ExternalProject.cmake  FindAnyProject.cmake  FindExtJPEG12.cmake  FindExtPROJ.cmake  FindExtProject.cmake  FindPROJ.cmake  Makefile.in  find_anyproject.cmake  find_extproject.cmake  geo_config.h.in  util.cmake
libxtiff/: CMakeLists.txt
opt/: folders.csv
